tests/parsing/type_redefinition_in_pkg/stderr.golden
error: redefinition of type 'my_type' in package 'pkg'
fbd/fbd-pkg/b.fbd +1:6
   |
 1 | type my_type stream
   |      ^^^^^^^
fbd/fbd-pkg/a.fbd +1:6
   |
 1 | type my_type mask
   |      ^^^^^^^
